<resources>
    <string name="app_name">Round Table Italia</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact">Aggiungi ai contatti</string>
    <string name="tavolecomitato">TAVOLE/COMITATO</string>
    <string name="rti">RTI</string>
    <string name="calendario">CALENDARIO</string>
    <string name="aimsobj">Aims &amp; Objects</string>
    <string name="instruction">The Aims and Objects of Round Table International Are:</string>
    <string name="instruction1">To prompt fellowship &amp; understanding between Roundtable association woldwide.
    </string>
    <string name="instruction2">To promote the formation of new Round Table Association thoroughout the world</string>
    <string name="instruction3">To initial, development &amp; improve working relationship with club 41 international and Ladies Circle international fellowship networking and join Service objectives. </string>
    <string name="instruction4">To promote abd administer joint service Project worldwise</string>
    <string name="gear">La app Round Table Italia è stata sviluppata da Portalidea Srl</string>
    <string name="gear1">Per utilizzare le sezioni protette della App devi essere membro della Round Table italia.</string>
    <string name="gear2">Se è la prima volta che utilizzi la App, vai nella sezione Login e registrati con la tua email presente in annuario.</string>
    <string name="register">Registrati</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">LOGIN</string>
    <string name="Documenti">DOCUMENTI</string>
    <string name="Search">SEARCH</string>
    <string name="comitato">Comitato di zona</string>
    <string name="elenco">Elenco Tavole Zona</string>
    <string name="addcontact">Hai meno di 40 anni e vuoi sapere \n cosa puo darti Round Table? \n Compila il modulo seguente e verrai  ricontattato!</string>
    <string name="nome">Nome</string>
    <string name="congome">Congome</string>
    <string name="datadinascita">Data di Nascita</string>
    <string name="citta">Città</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="invialarichiesta">INVIA LA RICHIESTA</string>
    <string name="CercaTabler">Cerca Tabler</string>
    <string name="Tablersviciniate">Tablers vicini a te</string>
    <string name="NTovelo">N° Tavola</string>
    <string name="scopiroundtable">Scopi Round Table Italia</string>
    <string name="adopt">Adopt, Adapt, Improve</string>
    <string name="facendo">Facendo proprio il motto \"Adopt, Adapt, Improve\", la Round Table Italia, conformemente alle proprie finalità di amicizia e tolleranza persegue i seguenti scopi:</string>
    <string name="adopt1">1. favorire i contatti fra i giovani che esercitano diverse professioni od esplicano diverse attività lavorative;</string>
    <string name="adopt2">2. dimostrare come tutte le professioni ed attività lavorative, esercitate con onore e coscienza, siano utili alla comunità;</string>
    <string name="adopt3">3. spronare ogni membro a contribuire con il suo personale esempio al prestigio della propria professione od attività lavorativa;</string>
    <string name="adopt4">4. coltivare i più alti valori morali e di pace, così nel campo dei rapporti professionali e degli affari, come nelle relazioni umane in genere;</string>
    <string name="adopt5">5. favorire l\'amicizia e le intese internazionali, in particolar modo attraverso frequenti contatti fra giovani di vari Paesi;</string>
    <string name="adopt6">6. promuovere e favorire iniziative al servizio della Collettività (Community Service) a livello locale, nazionale ed internazionale;</string>
    <string name="adopt7">7. promuovere ed organizzare lo sviluppo del movimento della Round Table in Italia</string>
    <string name="send">Send</string>
    <string name="otpcode">Inserisci il codice ricevuto</string>
    <string name="submit">Invia</string>
    <string name="password">Password</string>
    <string name="retypePassword">Conferma Password</string>
    <string name="logout">LOGOUT</string>
    <string name="somethingwentwrong">I dati inseriti non sono corretti.</string>
    <string name="Loginsucessfully">Accesso effettuato correttamente.</string>
    <string name="pdf1">Statuto Round Table Italia</string>
    <string name="pdf2">Statuto Fondazione Round Table Onlus</string>
    <string name="pdf3">Investitura di un nuovo Tabler</string>
    <string name="pdf4">Mansionario cariche di Tavola</string>
    <string name="contactsaved">Contatto salvato</string>
    <string name="forgetpassword">Password dimenticata</string>
    <string name="recoverpassword">Recupera password</string>
    <string name="updatedlocation">Località aggiornato con successo</string>
    <string name="blanktext">La ricerca effettuata non ha prodotto nessun risultato</string>
    <string name="notgettinglocation">Il tuo dispositivo non è sempre posizione da parte di Google</string>
    <string name="locationfailedupdate">La posizione non è aggiornato .</string>
    <string name="warningallfieldrequires">Attenzione! Devi compilare tutti i campi per inviare il modulo</string>
    <string name="inradiusof">Nel raggio di</string>
    <string name="personselected">Table selezionato :</string>
    <string name="zonertitalia">Zone Rt italia</string>
    <string name="comitatonazionale">Comitato Nazionale</string>

</resources>
