<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addcontact"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/fragment_add_contact_nome"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/nome"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_congome"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/congome"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_data_di"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/datadinascita"
            android:inputType="date"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_citta"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/citta"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_telefono"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/telefono"
            android:inputType="number"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/email"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/fragment_add_contact_note"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_white_edt"
            android:hint="@string/note"
            android:paddingLeft="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:button="@drawable/check_box"
                android:gravity="center"
                android:padding="5dp" />

            <TextView
                android:id="@+id/fragment_add_contact_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left|center"
                android:padding="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_add_contact_invia"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/appyellow"
            android:text="@string/invialarichiesta"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>