<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_260sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/ic_round_table_international" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/rouded_border"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aimsobj"
            android:textColor="@color/fontgray"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/instruction"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/dot1"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:src="@drawable/ic_black_dot" />

                    <TextView
                        android:id="@+id/fragment_aims_objects_inst1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/dot1"
                        android:text="@string/instruction1"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dot2"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:src="@drawable/ic_black_dot" />

                    <TextView
                        android:id="@+id/fragment_aims_objects_inst2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/dot2"
                        android:text="@string/instruction2"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/dot3"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:src="@drawable/ic_black_dot" />

                    <TextView
                        android:id="@+id/fragment_aims_objects_inst3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/dot3"
                        android:text="@string/instruction3"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dot4"
                        android:layout_width="5dp"
                        android:layout_height="5dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:src="@drawable/ic_black_dot" />

                    <TextView
                        android:id="@+id/fragment_aims_objects_inst4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_toRightOf="@+id/dot4"
                        android:text="@string/instruction4"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>
